userwise local storage added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        HTML 5 Local storage test.
+    </p>
+    <a asp-controller="localstoragetest" asp-action="index" class="btn btn-primary">Local Storage Test</a>
+    <a asp-controller="user" asp-action="index" class="btn btn-primary">User Wise Local Storage</a>
 </div>
