*[x] model changes and age form added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,8 @@
     <p>
         HTML 5 Local storage test.
     </p>
-    <a asp-controller="localstoragetest" asp-action="index" class="btn btn-primary">Local Storage Test</a>
+    <a asp-controller="localstoragetest" asp-action="index" class="btn btn-primary">Local Storage Test - Gets Removed on Submit</a>
     <a asp-controller="user" asp-action="index" class="btn btn-primary">User Wise Local Storage</a>
+    <a asp-controller="localstoragetest" asp-action="age" class="btn btn-primary">Local Storage With Age</a>
+    <a asp-controller="localstoragetest" asp-action="unlimited" class="btn btn-primary">Local Storage With Unlimited Age</a>
 </div>
