--- a/Views/LocalStorageTest/Age.cshtml
+++ b/Views/LocalStorageTest/Age.cshtml
@@ -10,9 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" id="form" class="submitForm">
+        <form asp-action="Create" id="age" class="submitForm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <span id="token" data-token="@ViewBag.FormCacheKey"></span>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
