*[x] local storage with unlimited age aded

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,3 +12,7 @@
     <a asp-controller="localstoragetest" asp-action="age" class="btn btn-primary">Local Storage With Age</a>
     <a asp-controller="localstoragetest" asp-action="unlimited" class="btn btn-primary">Local Storage With Unlimited Age</a>
 </div>
+
+@*<section id="localStorageList">
+
+</section>*@
